# Quantauri_PG

./: .pdm-python  Cargo.toml  pyproject.toml  test_plot.py
data/: bollinger.parquet  test.parquet
script/: bollinger_plot.py  test_plot.py
src/: algorithm.rs  base.rs  main.rs
