[package]
name = "quantauri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dialoguer = "0.11.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
peroxide = { version = "0.34.1", features = ["parquet"] }
rayon = "1.8.0"
